# mcdonalds-data-model

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  langgraph.json  pyproject.toml
.claude/: settings.local.json
.claude/commands/: check_for_secrets.md  commit-push-pr.md  commit.md  create_new_uv_workspace.md  create_plan.md
.claude/skills/langgraph-testing/: SKILL.md
.claude/skills/langgraph-testing/references/: python.md
.claude/skills/writing-plans/: SKILL.md
menus/mcdonalds/breakfast-menu/: breakfast-v2.schema.json
menus/mcdonalds/breakfast-menu/json/: breakfast-v2.json
menus/mcdonalds/breakfast-menu/xml/: breakfast-v2.xml  breakfast-v2.xsd
menus/mcdonalds/csv/: mcdonalds-menu-items-revised-full.csv
menus/raw-data/: mcdonalds-menu-items.csv  menu-structure-2026-01-30.json
menus/transformed-data/: mcdonalds-menu-items-revised-full.csv  menu.json
plan/: 2026-02-02-langgraph-drive-thru-workflow.REVIEW.md  2026-02-02-langgraph-drive-thru-workflow.md  2026-02-02-llamaindex-drive-thru-workflow.md  HANDOFF-v0-stage-1.md
plan/future-plans/: 2026-02-03-menu-model-with-loading.md  2026-02-05-v0-stage-1-simple-chatbot.md  2026-02-06-stage-2-two-bot-interview.md
plan/past-plans/: returns-library-integration.md
plans/: 2026-02-01-csv-to-json-transformation.md  2026-02-02-csv-to-json-transformation-v2.md  2026-02-02-csv-to-json-transformation-v3.md  2026-02-02-csv-to-json-transformation-v4.md  2026-02-02-modifier-extraction-questions.md
scripts/: csv_to_json_v4.py  seed_langfuse_prompts.py
src/: __init__.py  models.py
src/stage_1/: __init__.py  config.py  graph.py  main.py  pyproject.toml
src/stage_2/: pyproject.toml
src/stage_2/stage_2/: __init__.py  graph.py  main.py  personas.py
src/stage_3/: pyproject.toml
src/stage_3/stage_3/: __init__.py  models.py
thoughts/: README.md  langgraph-state-design-v0.md  langgraph-state-design-v00000.md
thoughts/.claude/: settings.local.json
thoughts/uv-workspace/: uv-workspace-structure.md
