[project]
name = "mcdonalds-data-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.4.1",
    "langgraph-cli>=0.4.12",
    "langgraph>=1.0.7",
    "llama-index>=0.14.13",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "returns>=0.26.0",
    "jsonschema>=4.26.0",
    "langfuse>=3.12.1",
    "langchain-openai>=1.1.7",
    "langchain-anthropic>=1.3.1",
    "pluralizer>=2.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
