[project]
name = "stage-3"
version = "0.1.0"
description = "Stage 3: Pydantic data models for menu and orders"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.26.0",
    "pluralizer>=2.0.0",
    "pydantic>=2.12.5",
    "returns>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stage_3"]
